<resources>
    <string name="app_name">DidacticHappiness</string>
    <string name="text_button_agus">Agustin</string>
    <string name="text_button_alberto">Larius</string>
    <string name="text_button_alex">Epeldix</string>
    <string name="text_button_arkaitz">Johnny Marroni</string>
    <string name="text_button_gorka">Naveirus</string>

    <string name="text_welcome_agus">Hola Agus, a ver que eres capáz de hacer majo!</string>
    <string name="text_welcome_alberto">Hola Larius, a ver que eres capáz de hacer majo!</string>
    <string name="text_welcome_alex">Hola Epeldix, a ver que eres capáz de hacer majo!</string>
    <string name="text_welcome_arkaitz">Hola Jonny Marroni, a ver que eres capáz de hacer majo!</string>

    <!-- Gorka's module-->
    <string name="text_welcome_gorka">Hola Naveirus, a ver que eres capáz de hacer majo!</string>
    <string name="text_welcome_user">Bienvenido al Oráculo Discordiano, pregunta lo que desees consultar</string>
    <string name="text_response_fun">Deja de preguntar txorradas</string>
    <string name="text_writing_user">Venga rapidito</string>
    <string name="text_button_go">Consultar</string>
    <string name="text_button_back">Volver</string>
    <string-array name="text_oracle_responses">
        <item>Estás encarando mal el problema, replantea la pregunta</item>
        <item>Vete a por ello sin dudarlo</item>
        <item>No tienes nada que hacer</item>
        <item>Jajajajaj No.</item>
        <item>Que tu mente no frene a tu instinto</item>
    </string-array>
    <!-- Gorka's module end-->

    <!-- Alberto's module -->
    <string name="imagen_cofradia">Imagen Cofradía</string>
    <string name="escudo_cofradia">Escudo Cofradía</string>
    <string name="cargando_edificios">Cargando Edificios</string>
    <!-- Alberto's module end -->
</resources>
